Fix avatar icon tooltip alignment in sidebar

--- a/app/stylesheets/builtin-pages/components/sidebar.less
+++ b/app/stylesheets/builtin-pages/components/sidebar.less
@@ -49,17 +49,6 @@
     margin-bottom: 25px;
     cursor: default;
 
-    &.avatar {
-      border-radius: 2px;
-      height: 23px;
-      width: 25px;
-      margin-left: auto;
-      margin-right: auto;
-      display: flex;
-      justify-content: space-around;
-      align-items: flex-end;
-    }
-
     &.settings {
       position: absolute;
       bottom: 15px;
@@ -76,6 +65,7 @@
       background: #111;
       border-radius: 4px;
       color: fadeout(#fff, 15%);
+      height: auto;
 
       &.avatar {
         width: 100px;
